# pypto_tile

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.claude/agents/code-review/: AGENT.md
.claude/skills/code-review/: SKILL.md
.github/workflows/: ci.yml
cext/: CMakeLists.txt
cext/src/: module.cpp
src/pypto/tile/: __init__.py
tests/lint/: check_english_only.py  check_headers.py  clang_tidy.py
